Finished Calc Styling/Layout and Added Button Values

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
     </div>
     <div class="buttons-screen">
         <div class="small-buttons-section">
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
-            <button class="small-button"></button>
+            <button id="7" class="small-button">7</button>
+            <button id="8" class="small-button">8</button>
+            <button id="9" class="small-button">9</button>
+            <button id="delete" class="small-button">DEL</button>
+            <button id="4" class="small-button">4</button>
+            <button id="5" class="small-button">5</button>
+            <button id="6" class="small-button">6</button>
+            <button id="add" class="small-button">+</button>
+            <button id="1" class="small-button">1</button>
+            <button id="2" class="small-button">2</button>
+            <button id="3" class="small-button">3</button>
+            <button id="subtract" class="small-button">-</button>
+            <button id="decimal" class="small-button">.</button>
+            <button id="0" class="small-button">0</button>
+            <button id="divide" class="small-button">/</button>
+            <button id="multiply" class="small-button">*</button>
         </div>
         <div class="large-buttons-section">
-            <button class="large-button"></button>
-            <button class="large-button"></button>
+            <button id="reset" class="large-button">RESET</button>
+            <button id="equal" class="large-button">=</button>
         </div>
     </div>
 </body>
